--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DonateX</title>
     <link rel="stylesheet" href="./stayl.css" />
   </head>
   <body>
@@ -58,55 +58,68 @@
 
         <img class="imgin5" src="./img/Rectangle 155.png" alt="" />
 
-        <img class="imgin6" src="./img/man-holding-piggy-bank-business-investment 1.png" alt="">
+        <img
+          class="imgin6"
+          src="./img/man-holding-piggy-bank-business-investment 1.png"
+          alt=""
+        />
 
-        <img class="imgin7" src="./img/Ellipse 16 (1).png" alt="">
+        <img class="imgin7" src="./img/Ellipse 16 (1).png" alt="" />
 
-        <img class="imgin8" src="./img/Group.png" alt="">
+        <img class="imgin8" src="./img/Group.png" alt="" />
 
         <h1 class="header-text">Quick Fundraise</h1>
 
-        <img class="imgin9" src="./img/2 501.png" alt="">
+        <img class="imgin9" src="./img/2 501.png" alt="" />
 
-        <img class="imgin10" src="./img/Vector.png" alt="">
-
+        <img class="imgin10" src="./img/Vector.png" alt="" />
       </div>
       <div class="container-div1">
         <div>
           <h1>12</h1>
 
-          <span>Years of <br>
-            Experience</span>
+          <span
+            >Years of <br />
+            Experience</span
+          >
         </div>
-        <hr>
+        <hr />
         <div>
           <h1 class="h1-14">14</h1>
-          <span>Thousands <br>
-            Volunteers</span>
+          <span
+            >Thousands <br />
+            Volunteers</span
+          >
         </div>
-        <hr>
+        <hr />
         <div>
           <h1>23</h1>
-          <span>Worldwide <br>
+          <span
+            >Worldwide <br />
             Offices
-            </span>
+          </span>
         </div>
-
       </div>
     </section>
     <section class="section2">
       <div>
-        <img src="./img/Mask Group.png" alt="">
+        <img src="./img/Mask Group.png" alt="" />
       </div>
       <div class="section__div">
         <button class="btn1">About Us</button>
 
-        <h1 class="Your">Your Support is Really <br>
-          Powerful.​</h1>
+        <h1 class="Your">
+          Your Support is Really <br />
+          Powerful.​
+        </h1>
 
-          <p class="p-text2">Automotive’s four Frederick locations continue its 20 plus <br> years tradition of quality auto repair services. vehicle <br> owners in the nearest gym enter and take a look?</p>
+        <p class="p-text2">
+          Automotive’s four Frederick locations continue its 20 plus <br />
+          years tradition of quality auto repair services. vehicle <br />
+          owners in the nearest gym enter and take a look?
+        </p>
 
-          <button class="btn2">Learn More</button>
+        <button class="btn2">Learn More</button>
       </div>
     </section>
 
@@ -116,35 +129,35 @@
       </div>
 
       <div class="texts">
-        <h1 class="div_h1">We do it for all people <br>
-          humanist project</h1>
-          <span class="texts_span">See More Service</span>
+        <h1 class="div_h1">
+          We do it for all people <br />
+          humanist project
+        </h1>
+        <span class="texts_span">See More Service</span>
       </div>
     </section>
 
     <section class="section__4">
       <div>
-        <img src="./img/Rectangle 171.png" alt="">
+        <img src="./img/Rectangle 171.png" alt="" />
 
-        <img class="section4img" src="./img/Rectangle 173.png" alt="">
+        <img class="section4img" src="./img/Rectangle 173.png" alt="" />
 
-        <img class="sectionnimg" src="./img/Group (2).png" alt="">
+        <img class="sectionnimg" src="./img/Group (2).png" alt="" />
       </div>
 
       <div>
+        <img class="stn-img" src="./img/Rectangle 171.png" alt="" />
 
-        <img class="stn-img" src="./img/Rectangle 171.png" alt="">
+        <img class="stn_img1" src="./img/Rectangle 175.png" alt="" />
 
-        <img class="stn_img1" src="./img/Rectangle 175.png" alt="">
+        <img class="stn_img2" src="./img/Group 218.png" alt="" />
 
-        <img class="stn_img2" src="./img/Group 218.png" alt="">
+        <img class="stn-img3" src="./img/Rectangle 171.png" alt="" />
 
-        <img class="stn-img3" src="./img/Rectangle 171.png" alt="">
+        <img class="stn-img4" src="./img/Rectangle 177.png" alt="" />
 
-        <img class="stn-img4" src="./img/Rectangle 177.png" alt="">
-
-        <img class="stn-img5" src="./img/Group (3).png" alt="">
-
+        <img class="stn-img5" src="./img/Group (3).png" alt="" />
       </div>
 
       <div class="stn_div">
@@ -154,17 +167,20 @@
       </div>
 
       <div class="stn_div_p">
-        <p class="stn_p">This is just a simple text made to replace
-          with any text. since caecal cupidatate
-          non-proident.</p>
+        <p class="stn_p">
+          This is just a simple text made to replace with any text. since caecal
+          cupidatate non-proident.
+        </p>
 
-          <p class="text_p">This is just a simple text made to replace
-            with any text. since caecal cupidatate
-            non-proident.</p>
+        <p class="text_p">
+          This is just a simple text made to replace with any text. since caecal
+          cupidatate non-proident.
+        </p>
 
-            <p class="text_3">This is just a simple text made to replace
-              with any text. since caecal cupidatate
-              non-proident.</p>
+        <p class="text_3">
+          This is just a simple text made to replace with any text. since caecal
+          cupidatate non-proident.
+        </p>
       </div>
       <div class="span_section">
         <span class="span_0">Read More</span>
@@ -174,21 +190,24 @@
     </section>
 
     <section class="section_container6">
-      <div  class="section6_div">
-
+      <div class="section6_div">
         <button class="btn6">About Us</button>
 
-        <h1 class="section6_h1"> Your Support is Really <br>
-          Powerful.​</h1>
+        <h1 class="section6_h1">
+          Your Support is Really <br />
+          Powerful.​
+        </h1>
 
-          <p class="section6_p">Automotive’s four Frederick locations continue its 20 plus <br>
-            years tradition of quality auto repair services. vehicle <br>
-            owners in the nearest gym enter and take a look?</p>
+        <p class="section6_p">
+          Automotive’s four Frederick locations continue its 20 plus <br />
+          years tradition of quality auto repair services. vehicle <br />
+          owners in the nearest gym enter and take a look?
+        </p>
 
-          <button class="section6-btn">Learn More</button>
+        <button class="section6-btn">Learn More</button>
       </div>
       <div>
-        <img class="images" src="./img/img" alt="">
+        <img class="images" src="./img/img" alt="" />
         <div class="box"></div>
       </div>
     </section>
@@ -197,41 +216,43 @@
       <div>
         <button class="section_btn7">Our Couses</button>
 
-        <h1 class="section_h17">Donate To People In <br>
-          Need Our Causes.​</h1>
+        <h1 class="section_h17">
+          Donate To People In <br />
+          Need Our Causes.​
+        </h1>
       </div>
 
       <div class="section7-img">
-       <div>
-        <img src="./img/Rectangle 161.png" alt="">
-       </div>
+        <div>
+          <img src="./img/Rectangle 161.png" alt="" />
+        </div>
 
-       <div>
-        <img src="./img/Rectangle 161.png" alt="">
-       </div>
+        <div>
+          <img src="./img/Rectangle 161.png" alt="" />
+        </div>
 
-       <div>
-        <img src="./img/Rectangle 161.png" alt="">
-       </div>
+        <div>
+          <img src="./img/Rectangle 161.png" alt="" />
+        </div>
       </div>
 
       <div class="div-containers">
         <div>
-          <img class="divimg" src="./img/images.png" alt="">
+          <img class="divimg" src="./img/images.png" alt="" />
         </div>
 
         <div>
-          <img class="divimgs" src="./img/images2.png" alt="">
+          <img class="divimgs" src="./img/images2.png" alt="" />
         </div>
 
         <div>
-          <img class="divimages" src="./img/images3.png" alt="">
+          <img class="divimages" src="./img/images3.png" alt="" />
         </div>
       </div>
 
       <div class="div_span">
         <div>
-          <span  class="sports">Sports</span>
+          <span class="sports">Sports</span>
         </div>
 
         <div>
@@ -242,50 +263,56 @@
           <span class="healths">Health</span>
         </div>
       </div>
-  
+
       <div class="nav">
         <div>
-          <h1 class="nav_h11">Donate for nutrition less poor <br>
-            children.</h1>
+          <h1 class="nav_h11">
+            Donate for nutrition less poor <br />
+            children.
+          </h1>
 
-            <span class="nav_span">Goal - $1360.00     Rise - $2500.00</span>
+          <span class="nav_span">Goal - $1360.00 Rise - $2500.00</span>
 
-            <button class="nav_button">Donate Now</button>
+          <button class="nav_button">Donate Now</button>
         </div>
 
         <div>
-          <h1 class="nav_h22">Donate for Study less poor <br>
-            children.</h1>
+          <h1 class="nav_h22">
+            Donate for Study less poor <br />
+            children.
+          </h1>
 
-            <span class="nav_span2">Goal - $120.00     Rise - $910.00
-            </span>
-            <button class="nav_button2">Donate Now</button>
+          <span class="nav_span2">Goal - $120.00 Rise - $910.00 </span>
+          <button class="nav_button2">Donate Now</button>
         </div>
 
         <div>
-          <h1 class="nav_h1">Sponsor for food, medicine and <br>
-            pure water.</h1>
+          <h1 class="nav_h1">
+            Sponsor for food, medicine and <br />
+            pure water.
+          </h1>
 
-            <span class="nav_span3">Goal - $100.00     Rise - $260.00</span>
+          <span class="nav_span3">Goal - $100.00 Rise - $260.00</span>
 
-            <button class="nav_button3">Donate Now</button>
+          <button class="nav_button3">Donate Now</button>
         </div>
       </div>
-
     </section>
 
     <footer class="footer-container">
       <div>
-        <img class="footer_img" src="./img/Mask Group (1).png" alt="">
+        <img class="footer_img" src="./img/Mask Group (1).png" alt="" />
       </div>
 
       <div>
         <h1 class="how_h1">How Can We Help You?</h1>
 
-        <p class="footer_p">Your donation will help us save and improve lives with research,<br>
-          education three and emergency care.</p>
+        <p class="footer_p">
+          Your donation will help us save and improve lives with research,<br />
+          education three and emergency care.
+        </p>
 
-          <img class="img_footer" src="./img/Group 220.png" alt="">
+        <img class="img_footer" src="./img/Group 220.png" alt="" />
       </div>
     </footer>
   </body>
